--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -1,35 +1,35 @@
 FROM php:8.2-fpm
 
-# Instalar dependencias
+# Instalar extensiones necesarias
 RUN apt-get update && apt-get install -y \
-    git \
-    curl \
     libpng-dev \
-    libonig-dev \
-    libxml2-dev \
+    libjpeg-dev \
+    libfreetype6-dev \
     zip \
-    unzip
+    unzip \
+    && docker-php-ext-configure gd \
+    && docker-php-ext-install pdo pdo_mysql gd
 
-# Instalar extensiones PHP necesarias
-RUN docker-php-ext-install pdo_mysql mbstring exif pcntl bcmath gd
+# Cambiar listen en www.conf para que PHP-FPM escuche en todas las interfaces
+RUN sed -i 's/listen = 127.0.0.1:9000/listen = 0.0.0.0:9000/' /usr/local/etc/php-fpm.d/www.conf
 
-# Instalar Composer
-COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
-
-# Crear el directorio de la aplicación
+# Configurar directorio de trabajo
 WORKDIR /var/www/html
 
-# Copiar archivos
+# Copiar archivos del proyecto
 COPY . .
+
+# Instalar dependencias de Laravel
+RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer \
+    && composer install
 
 # Configurar permisos
 RUN chown -R www-data:www-data /var/www/html \
-    && chmod -R 755 /var/www/html
-
-# Instalar dependencias de Laravel
-RUN composer install --optimize-autoloader --no-dev
+    && chmod -R 775 /var/www/html/storage \
+    && chmod -R 775 /var/www/html/bootstrap/cache
 
 # Exponer el puerto 9000
 EXPOSE 9000
 
+# Comando para iniciar PHP-FPM
 CMD ["php-fpm"]
