--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,18 +1,18 @@
 server {
     listen 80;
+    server_name localhost;
 
-    # Configuración para servir el frontend (Angular)
+    root /var/www/html/public; # Asegúrate de apuntar al directorio "public" de Laravel
+    index index.php index.html;
+
     location / {
-        root /usr/src/app/dist; # Ruta donde estarán los archivos de Angular
-        index index.html;
-        try_files $uri /index.html; # Soporte para rutas de Angular
+        try_files $uri $uri/ /index.php?$query_string;
     }
 
-    # Configuración para servir el backend (Laravel API)
-    location /api {
-        proxy_pass http://laravel_app;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    location ~ \.php$ {
+        include fastcgi_params;
+        fastcgi_pass laravel:9000; # Conexión a PHP-FPM
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
     }
 }
