--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -25,11 +25,17 @@
               }
             ],
             "styles": [
+              "node_modules/minireset.css/minireset.css",
               "@angular/material/prebuilt-themes/azure-blue.css",
               "src/styles.css",
-              "./node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/igniteui-angular/styles/igniteui-angular.css",
+              "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
             ],
-            "scripts": []
+            "scripts": ["./node_modules/hammerjs/hammer.min.js"],
+            "stylePreprocessorOptions": {
+              "includePaths": ["node_modules"]
+            }
           },
           "configurations": {
             "production": {
@@ -90,9 +96,15 @@
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
               "src/styles.css",
-              "./node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/igniteui-angular/styles/igniteui-angular.css",
+              "node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
             ],
-            "scripts": []
+            "scripts": ["./node_modules/hammerjs/hammer.min.js"],
+            "stylePreprocessorOptions": {
+              "includePaths": ["node_modules"]
+            }
           }
         }
       }
