--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,13 @@
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
+    "@igniteui/material-icons-extended": "^3.1.0",
     "bootstrap": "^5.3.3",
+    "fflate": "^0.8.1",
+    "hammerjs": "^2.0.8",
+    "igniteui-angular": "^19.0.4",
+    "minireset.css": "~0.0.4",
+    "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -29,6 +35,8 @@
     "@angular-devkit/build-angular": "^19.0.1",
     "@angular/cli": "^19.0.1",
     "@angular/compiler-cli": "^19.0.0",
+    "@igniteui/angular-schematics": "~19.0.1430",
+    "@types/hammerjs": "^2.0.40",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.4.0",
     "karma": "~6.4.0",
