--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
     "@igniteui/material-icons-extended": "^3.1.0",
+    "angular-calendar": "^0.31.1",
     "bootstrap": "^5.3.3",
+    "date-fns": "^4.1.0",
     "fflate": "^0.8.1",
     "hammerjs": "^2.0.8",
     "igniteui-angular": "^19.0.4",
