--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,61 +1,6 @@
-version: "3.8"
+version: "3.9"
 
 services:
-  laravel:
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
-    container_name: laravel_app
-    restart: always
-    environment:
-      - APP_ENV=local
-      - APP_DEBUG=true
-      - COMPOSER_ALLOW_SUPERUSER=1
-    #volumes:
-    #- ./backend:/var/www/html
-    #- /var/www/html/vendor
-    #- /var/www/html/storage
-    depends_on:
-      - db
-
-  angular:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
-    container_name: angular_app
-    restart: always
-    ports:
-      - "4200:80"
-    #volumes:
-    #- ./frontend:/usr/src/app
-
-  nginx-b:
-    image: nginx:latest
-    container_name: nginx_server
-    restart: always
-    ports:
-      - "80:80"
-    #volumes:
-    #- ./nginx/conf.d:/etc/nginx/conf.d
-    #- ./backend:/var/www/html
-    #- ./frontend:/var/www/html
-    depends_on:
-      - laravel
-      - angular
-  nginx-f:
-    image: nginx:latest
-    container_name: nginx_server
-    restart: always
-    ports:
-      - "80:80"
-    #volumes:
-    #- ./nginx/conf.d:/etc/nginx/conf.d
-    #- ./backend:/var/www/html
-    #- ./frontend:/var/www/html
-    depends_on:
-      - laravel
-      - angular
-
   db:
     image: mysql:8
     container_name: mysql_db
@@ -69,5 +14,55 @@ services:
     ports:
       - "3306:3306"
 
+  backend:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    container_name: medicare_backend
+    environment:
+      APP_NAME: Laravel
+      APP_ENV: local
+      APP_KEY: base64:5hHdJC5Y+qvIeTD4j0uIMfeDrMONNEyoQ69y//E83s0=
+      APP_DEBUG: "true"
+      APP_URL: http://localhost
+      DB_CONNECTION: mysql
+      DB_HOST: db
+      DB_PORT: 3306
+      DB_DATABASE: medicare
+      DB_USERNAME: medicare_user
+      DB_PASSWORD: medicare_password
+    volumes:
+      - ./backend:/var/www/html
+    depends_on:
+      - db
+    ports:
+      - "8000:8000"
+    command: php artisan serve --host=0.0.0.0 --port=8000
+
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    container_name: medicare_frontend
+    ports:
+      - "4200:4200"
+    volumes:
+      - ./frontend:/usr/src/app
+    working_dir: /usr/src/app
+    command: npm start
+    depends_on:
+      - backend
+
+  nginx:
+    image: nginx:latest
+    container_name: medicare_nginx
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - backend
+      - frontend
+
 volumes:
-  db_data: {}
+  db_data:
