--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -1,15 +1,20 @@
-FROM node:18-alpine
+FROM node:20-alpine
 
-# Establecer directorio de trabajo
 WORKDIR /usr/src/app
 
-# Copiar archivos del frontend
-COPY . .
+# Instalar Angular CLI globalmente
+RUN npm install -g @angular/cli@19
+
+# Copiar package.json y package-lock.json
+COPY package*.json ./
 
 # Instalar dependencias
 RUN npm install
 
-# Puerto
+# Copiar el resto del código fuente
+COPY . .
+
 EXPOSE 4200
 
-CMD ["npm", "start"]
+# Comando para servir la aplicación
+CMD ["ng", "serve", "--host", "0.0.0.0", "--disable-host-check"]
