--- a/nginx.conf
+++ b/nginx.conf
@@ -3,16 +3,16 @@ server {
 
     server_name localhost;
 
+    # Frontend Angular
     location / {
-        proxy_pass http://medicare_frontend:4200;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        root /usr/share/nginx/html; # Ruta donde se montan los archivos de Angular
+        index index.html;
+        try_files $uri /index.html;
     }
 
+    # Backend API Laravel
     location /api/ {
-        proxy_pass http://medicare_backend:8000;
+        proxy_pass http://backend:9000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
